crates/rlf-macros/tests/fail/unsupported_source_transform.rs
use rlf::rlf;

rlf! {
    card = :fem "carta";
    bad = "{@el card}";
}

fn main() {}
